# Matter-Apps

./: .gitignore  README.md  openocd.cfg
bluetooth/peripheral_status/: prj.conf  read_status.py
bluetooth/xbox_central/: CMakeLists.txt  Kconfig.sysbuild  README.md  prj.conf
cli_disp/: CMakeLists.txt  LCD_CONFIG.md  prj.conf
cli_disp/boards/: nrf52840dk_nrf52840.overlay  nrf54l15dk_nrf54l15_cpuapp_ns.conf  nrf54l15dk_nrf54l15_cpuapp_ns.overlay
coprocessor/: CMakeLists.txt  Kconfig  prj.conf
docs/: .gitignore  APPLICATION_STARTUP_FAILURE_ANALYSIS.md  APPROTECT_CONFIG.md  DEBUG_GUIDE.md  DEBUG_MCUBOOT_APP.md  MCUBOOT_BOOT_FAILURE_DEBUG.md  OPENOCD_INIT_EXPLAINED.md  RESET_VECTOR_EXPLAINED.md  WHY_NOT_IN_MAIN.md  ZEPHYR_BOOT_FLOW.md  ZEPHYR_BUILD_PROCESS.md  zephyr_linker.md
esb/esb_ptx/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
esb/esb_ptx/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
esb/esb_ptx/src/: main.c  rc_ptx_channels.c  rc_ptx_channels.h  rc_ptx_uart_channels.c  rc_ptx_uart_channels.h  rc_uart_bridge.c  rc_uart_bridge.h
hello-world/: prj.conf
light_bulb_mote/: README.md  debug.sh  prj_no_dfu.conf
lock/: CMakeLists.txt
openocd/: OPENOCD_SEARCH_PATH.md  openocd-54.cfg
plug_mote/: CMakeLists.txt  MCUBOOT_SWAP_MODE_ANALYSIS.md  debug-mcuboot.sh  jlink.cfg  prj.conf  prj_no_dfu.conf  prj_release.conf
shell_factory_verify/: mote_nrf528xx.overlay  prj.conf
smart_plugs_mote/: .gdbinit-mcuboot  CMakeLists.txt  RESET_TO_NORMAL_BOOT.md  pm_static_nrf52840dk_nrf52840.yml  prj.conf  prj_no_dfu.conf  sysbuild_internal.conf
(+91 files in other folders)
